Fix text overflow

--- a/client/src/app/club/club.component.scss
+++ b/client/src/app/club/club.component.scss
@@ -89,6 +89,10 @@
       margin: 0;
     }
 
+    p-floatLabel {
+      max-width: 100%;
+    }
+
     .p-float-label {
       margin-top: 32px;
       .p-inputwrapper {
